# gumma

./: .eslintrc.json  .gitignore  .graphqlrc.yml  README.md  codegen.ts  docker-compose.yaml  graphql.config.ts  package.json  plupp.ts
.github/workflows/: linting.yml  testing.yml
gumma-auth/: Cargo.toml  Dockerfile  README.md
gumma-auth/src/: auth.rs  endpoint.rs  frontend_old.rs  lib.rs  main.rs  todo.rs
gumma-auth/src/frontend/: endpoint.rs  mod.rs  old.rs  support.rs
gumma-auth/tests/: auth.rs
gumma-groups/: Dockerfile  package.json  tsconfig.json
gumma-groups/prisma/: schema.prisma
gumma-groups/src/: index.ts  prisma.ts  server.ts  test.ts
gumma-groups/src/schema/: builder.ts  index.ts
gumma-groups/src/schema/objects/: Group.test.ts  Group.ts  Member.ts  Person.test.ts  Person.ts
gumma-groups/src/schema/tests/: group.test.ts  person.test.ts
