[package]
name = "gumma-auth"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/antoneekstrom/gumma"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
oxide-auth = "0.5.3"
serde_json = "1.0.85"
# diesel = "2.0.1"
# hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }